# server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: fetch_curl.cmake
core/: CMakeLists.txt
core/include/core/: account.h
core/include/core/builtin/: thread_pool.h
core/include/core/currency/: basic_converter.h  converter_frankfurter.h
core/include/core/database/: data.h
core/include/core/email/: html_template.h
core/include/core/utils/: crypto.h  folder.h  request.h  time.h  timer.h  uuid.h
core/src/: account.cpp  thread_pool.cpp
core/src/currency/: converter_frankfurter.cpp
core/src/database/: data.cpp
core/src/email/: html_template.cpp
core/src/utils/: crypto.cpp  folder.cpp  request.cpp  time.cpp  timer.cpp  uuid.cpp
email_templates/: CMakeLists.txt  welcome_en.html  welcome_zhCN.html
tests/: CMakeLists.txt
tests/core/module/: CMakeLists.txt  account_db_create.cpp
